cmake_minimum_required(VERSION 3.9)
project(ACM)

set(CMAKE_CXX_STANDARD 11)

#add_executable(ACM Homework/Linux-C/copy.c)
#add_executable(ACM Homework/Linux-C/SubThread.c)
#add_executable(ACM Homework/Linux-C/SubProcess.c)
#add_executable(ACM Homework/Linux-C/LinuxSIGINT.c)
#TARGET_LINK_LIBRARIES(ACM pthread)
#add_executable(ACM tmp/1.cpp)
#add_executable(ACM tmp/2.cpp)
#add_executable(ACM tmp/3.cpp)
#add_executable(ACM tmp/4.cpp)
